chanes session infos to stream
